cryptsetup (2:2.3.0-1) UNRELEASED; urgency=medium

  * New upstream release, introducing support for BitLocker-compatible
    devices (BITLK format) used in Windows systems.
  * Install cryptdisks_{start,stop} bash completion scripts to the right
    path/name so they are loaded automatically. This was no longer the case
    since 2:1.7.0-1.  (Closes: #949623)
  * d/*.install: Replace tabs with spaces.
  * d/cryptdisks-functions: Fix broken $FORCE_START handling.  Since
    2:2.0.3-2 the SysV init scripts' "force-start" option was no longer
    overriding noauto/noearly.  (Closes: #933142)
  * Move some functions to d/function from the initramfs hook.
  * SysV init scripts: skip devices holding the root FS and/or /usr during the
    shutdown phase; these file systems are still mounted at this point so any
    attempt to gracefully close the underlying device(s) is bound to fail.
    (Closes: #916649, #918008)
  * Bump Standards-Version to 4.5.0 (no changes necessary).

 -- Guilhem Moulin <guilhem@debian.org>  Tue, 04 Feb 2020 14:39:59 +0100

cryptsetup (2:2.2.2-3) unstable; urgency=high

  * initramfs hook: Workaround fix for the libgcc_s's source location.
    (Closes: #950628, #939766.)  Fixing #950254 will provide a better
    solution.

 -- Guilhem Moulin <guilhem@debian.org>  Tue, 04 Feb 2020 14:11:12 +0100

cryptsetup (2:2.2.2-2) unstable; urgency=medium

  [ Guilhem Moulin ]
  * d/initramfs/hooks/cryptroot: On initramfs images built with MODULES=dep,
    include the IV generator found in the cipher specification when there is a
    matching kernel module.  On 5.4 kernels ESSIV isn't implemented in
    dm_crypt anymore, but by a dedicated 'essiv' module which thus needs to be
    available in order to unlock dm-crypt target using 'aes-cbc-essiv:sha256'.
    Closes: #948593.

  [ Debian Janitor ]
  * Set debhelper-compat version in Build-Depends.
  * Set upstream metadata fields: Bug-Database, Bug-Submit, Repository,
    Repository-Browse.
