@@ -110,7 +110,6 @@ setup_mapping() {
     device_msg "starting"
 
     local out tmpdev
-    get_crypt_type # set CRYPTTAB_TYPE to the type of crypt device
     if [ "$CRYPTTAB_TYPE" != "luks" ]; then
         if ! out="$(/lib/cryptsetup/checks/un_blkid "$CRYPTTAB_SOURCE" 2>/dev/null)" &&
                 ! /lib/cryptsetup/checks/blkid "$CRYPTTAB_SOURCE" swap >/dev/null; then
