@@ -123,7 +123,6 @@ setup_mapping() {
         fi
     fi
 
-    get_crypt_type # set CRYPTTAB_TYPE to the type of crypt device
     local count=0 maxtries="${CRYPTTAB_OPTION_tries:-3}" fstype vg rv
     while [ $maxtries -le 0 ] || [ $count -lt $maxtries ]; do
         if [ -z "${CRYPTTAB_OPTION_keyscript+x}" ] && [ "$CRYPTTAB_KEY" != "none" ]; then
